Moving third party libs out of the main src, removed Apache commons codec, cleaned up